service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-1
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: nginx-1
